micromixin-test-j8/src/main/java/org/stianloader/micromixin/test/j8/targets/invalid/InvalidPrintAttemptTestA.java
package org.stianloader.micromixin.test.j8.targets.invalid;

public class InvalidPrintAttemptTestA {
    public void instanceMethod() {
    }
}
